<resources>
    <string name="app_name">Sujalam Suphalam</string>
    <string name="progress_loading">Loding</string>
    <string name="progress_please_wait">Please wait</string>
    <string name="error_something_went_wrong">Something went wrong, Please try again</string>
    <string name="error_no_internet">Please check your internet connection</string>
    <string name="error_login">Incorrect credentials.</string>
    <string name="not_Submitted_Slow_Interenet">Form can not be submitted due to slow internet connection.Form has been saved.</string>
    <string name="attendance_rejection_reason">Please provide reason for attendance rejection.</string>
    <string name="text_mediatype">Select Media Type</string>
    <string name="text_image">Image</string>
    <string name="text_audio">Audio</string>
    <string name="text_video">Video</string>
    <string name="login_successful">Login Successful…</string>
    <string name="text_record">Record Audio</string>
    <string name="text_select_audio">Select Audio</string>
    <string name="text_chooseaudio">Choose Audio</string>
    <string name="text_size_exceed">File Size Cannot Be Greater than 5 MB</string>
    <string name="text_are_you_sure">Are you sure?</string>
    <string name="text_delete">You really want to delete this post?</string>
    <string name="text_choosepicture">Choose Picture</string>
    <string name="text_choosevideo">Choose Video</string>
    <string name="text_gallary">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="error_offline_share_post">You cannot share offline post</string>
    <string name="error_offline_like_post">You cannot like offline post</string>
    <string name="ok">OK</string>
    <string name="Setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="no_gps">GPS is not available.</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="gps_popup_title">Please turn on GPS/LOCATION.</string>
    <string name="reporting_template">Reporting Template</string>
    <string name="intro_about_header">About</string>
    <string name="intro_about_description">Mulyavardhan (MV) is a value education programme to help children imbibe democratic values, attitudes and skills in an enabling school climate. The programme is running in select government primary schools across 34 districts of Maharashtra (MV-GoM), government primary schools in two tehsils of Beed district of Maharashtra (MV-Beed), select government primary schools in the state of Goa (MV-GoG), and schools run in Goa by Vidya Bharti, a private school body (MV-VB).  Visit www.mulyavardhan.com for more info</string>
    <string name="intro_mv_training_events_header">MV Trainings</string>
    <string name="fragment_intro_about">About mulyawardhan</string>
    <string name="fragment_intro_training">MV Trainings</string>
    <string name="fragment_intro_events">MV Events</string>
    <string name="name">First Name *</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile Number *</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="role">Role</string>
    <string name="mandatory_role">Role *</string>
    <string name="project">Project</string>
    <string name="particulars">Particulars</string>
    <string name="organization">Organization</string>
    <string name="disrict">District </string>
    <string name="mandatory_district">District *</string>
    <string name="taluka">Taluka </string>
    <string name="mandatory_taluka">Taluka *</string>
    <string name="cluster">Cluster </string>
    <string name="mandatory_cluster">Cluster *</string>
    <string name="village">Village </string>
    <string name="mandatory_village">Village *</string>
    <string name="school_name">Structure Name </string>
    <string name="mandatory_school_name">Structure Name  *</string>
    <string name="school_code">Structure Code</string>
    <string name="district">District </string>
    <string name="state">State </string>
    <string name="mandatory_state">State *</string>
    <string name="profile_pic">Add Profile Picture</string>
    <string name="Approve">Approve</string>
    <string name="Reject">Reject</string>
    <string name="thet_savnd">\"Thet Sanvad\" with\nMr.Shantilal Muttha</string>
    <string name="update_profile">Update Profile</string>
    <string name="approve_profile"> You are not approved yet. </string>
    <string name="approve_profile2">will approve you.</string>
    <string name="issue">Issue Type</string>
    <string name="priority">Priority</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">Description : It�s\nbeen an amazing first months since we launched the App! Here are some of the best moments in case you missed them!</string>
    <string name="catagory">Categories</string>
    <string name="reporting">Reporting Type</string>
    <string name="question_5">Question 5</string>
    <string name="hoy">Yes</string>
    <string name="nahi">No</string>
    <string name="question_4">Question 4</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="msg_manual_otp">(Enter the Password below in case if we fail to detect the SMS automatically)</string>
    <string name="resend"> <u>Resend Password</u></string>
    <string name="check_otp">Please Check Password</string>
    <string name="cannotLogout">You cannot logout</string>
    <string name="submitAllForms">Please submit all forms and then logout…</string>
    <string name="Submit">Submit</string>
    <string name="Save">Save</string>
    <string name="download">Download</string>
    <string name="locked">Locked</string>
    <string name="backExit">Please click BACK again to exit </string>
    <string name="select_lang"> Select Language</string>
    <string name="select_status"> Select Status</string>
    <string name="broadcast">Broadcast\nMessage</string>
    <string name="community">My\nCommunity</string>
    <string name="programme_management">Programme\nManagement</string>
    <string name="training_content">Sujalam Suphalam\nContent</string>
    <string name="indicator">My\nReports</string>
    <string name="training_calendar">My\nCalendar</string>
    <string name="notification">Notification</string>
    <string name="rate">Rate Us</string>
    <string name="share">Share App</string>
    <string name="map">Map</string>
    <string name="team_management">Team\nManagement</string>
    <string name="claender_reportinng">Create Event</string>
    <string name="seconds_remaining">Seconds remaining </string>
    <string name="back_string">Please click BACK again to exit </string>
    <string name="please_enter">Please Enter </string>
    <string name="please_enter_text">Please Enter Text</string>
    <string name="please_enter_date">Please Enter Date</string>
    <string name="please_enter_date_time">Please Enter Date-Time</string>
    <string name="digit"> digit </string>
    <string name="logout_string">Do you want to Logout? </string>
    <string name="delete_task_string">Do you want Delete? </string>
    <string name="class_observation">Class Observation</string>
    <string name="training_responsiblity">Training Responsibility </string>
    <string name="loading_comment">Loading Comments</string>
    <string name="please_comment">Please Enter Comment…</string>
    <string name="comment_add">Comment Added Successfully…</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="enter_comment">Please Enter Comment</string>
    <string name="share_post">Sharing Post…</string>
    <string name="post_share_successfully">Post Share Successfully…</string>
    <string name="submitted_successfully">Submitted Successfully…</string>
    <string name="select_one">Select One Community</string>
    <string name="comunity_detail">Community Details</string>
    <string name="template_type">Template Type</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="loading_chats">Loading Chats</string>
    <string name="loading_members">Loading Members</string>
    <string name="loading_template">Loading Template</string>
    <string name="home">Home</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="select_temp">Please select template type…</string>
    <string name="img_template">Image Template</string>
    <string name="loding_district">Loading Districts</string>
    <string name="loding_taluka">Loading Taluka</string>
    <string name="loding_cluster">Loading Cluster</string>
    <string name="loding_school">Loading Structure</string>
    <string name="loding_village">Loading Village</string>
    <string name="issue_template">Issue Template</string>
    <string name="issue_submit">Issue submitted successfully…</string>
    <string name="broadcast_submit">Broadcast submitted successfully…</string>
    <string name="Process_Detail">Process Detail</string>
    <string name="fileNotPresent">File is not present. Please Press Download Button</string>
    <string name="no_data_available">No Data Available</string>
    <string name="Task_List">Task List</string>
    <string name="Loading_Process">Loading Process</string>
    <string name="No_Task">No Task Available</string>
    <string name="Loading_Roles">Loading Roles</string>
    <string name="Please_Enter_Name">Please Enter Name</string>
    <string name="Please_Enter_Mobile_Number">Please Enter Mobile Number</string>
    <string name="mobile_numer_enter">Please Enter 10 digit mobile number</string>
    <string name="Please_select_Role">Please select Role</string>
    <string name="Please_select_Gender">Please select Gender</string>
    <string name="Please_Enter_valid_email_address">Please Enter valid email address</string>
    <string name="Please_select_State">Please select State</string>
    <string name="Please_select_district">Please select District</string>
    <string name="Please_select_taluka">Please select Taluka</string>
    <string name="Please_select_custer">Please select Cluster</string>
    <string name="Please_select_village">Please select Village</string>
    <string name="Please_select_school">Please select Structure</string>
    <string name="MV_training">MV  Training</string>
    <string name="Video_template">Video Template</string>
    <string name="Community_member">Members</string>
    <string name="Forward">Forward</string>
    <string name="Share">Share</string>
    <string name="Like">Like</string>
    <string name="gender">Gender *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="Templates">Templates</string>
    <string name="Schedule_training">Schedule Training</string>
    <string name="team_user_approval">User Approval</string>
    <string name="team_form_approval">Form Approval</string>
    <string name="lang">Change Language</string>
    <string name="profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="add_location">Add Location</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="reason">Reason</string>
    <string name="type_of_leaves">Type Of Leaves</string>
    <string name="pending">Pending</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="asset_remarks">Remarks</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="amount_to_approve">Amount to be Approve</string>
    <string name="adavanceDesription">Description of Advance</string>
</resources>