<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search / will display always -->
    <item
        android:id="@+id/action_lang"
        android:title="@string/lang" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/action_add_school"
        android:title="@string/add_location" />
    <item
        android:id="@+id/action_notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share" />
    <item
        android:id="@+id/action_rate"
        android:title="@string/rate" />


    <item
        android:id="@+id/action_logout"
        android:title="@string/logout" />


</menu>