<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/sort_layout"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:scrollbars="vertical" />

            <LinearLayout
                android:id="@+id/lnr_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <com.sujalamsufalam.Widgets.MyFontButton
                    android:id="@+id/btn_pending"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selected_btn_background"
                    android:text="@string/pending"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text" />
                <com.sujalamsufalam.Widgets.MyFontButton
                    android:id="@+id/btn_approve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/light_grey_btn_background"
                    android:layout_weight="1"
                    android:text="@string/Approve"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text" />

                <com.sujalamsufalam.Widgets.MyFontButton
                    android:id="@+id/btn_reject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/light_grey_btn_background"
                    android:text="@string/Reject"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text" />


            </LinearLayout>
        <LinearLayout
            android:id="@+id/sort_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/toolbar">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="visible"
                android:background="@drawable/search_rounded"
                android:layout_weight="1">

                <com.sujalamsufalam.Widgets.MyEditTextView
                    android:id="@+id/edit_text_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/search"
                    android:drawablePadding="10dp"
                    android:focusableInTouchMode="true"
                    android:hint="Search User"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text"
                    android:padding="5dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/textNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data_available"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/large_text" />

    </RelativeLayout>
</layout>